# Syft

./: .gitignore  BENCHMARKS  CMakeLists.txt  Common.cpp  Common.h  DFA.cpp  DFA.h  INSTALL  INSTALL.md  InputFirst.cpp  InputFirst.h  LICENSE  Makefile  ltlf2fol  ltlf2fol_old  main.cpp  syn.cpp  syn.h  x.fol
CMakeModules/: Findcudd.cmake  Findmona.cmake
src/: CMakeLists.txt  Main.cpp
src/ltlf2fol/: CMakeLists.txt  ltl_formula.c  ltl_formula.h  ltlf2fol.cpp  ltlf2fol.h  ltllexer.l  ltlparser.y  main.cpp  trans.c  trans.h  translate.cpp  utility.cpp  utility.h
src/synthesis/: CMakeLists.txt  Common.h  DFA.cpp  DFA.h  main.cpp  syn.cpp  syn.h  synStrategy.cpp
src/synthesis/header/: DfaGameSynthesizer.h  ExplicitStateDfa.h  ExplicitStateDfaMona.h  InputOutputPartition.h  Player.h  Quantification.h  ReachabilityMaxSetSynthesizer.h  Stopwatch.h  String_utilities.h  SymbolicStateDfa.h  Synthesizer.h  Transducer.h  VarMgr.h
src/synthesis/source/: DfaGameSynthesizer.cpp  ExplicitStateDfa.cpp  ExplicitStateDfaMona.cpp  InputOutputPartition.cpp  Quantification.cpp  ReachabilityMaxSetSynthesizer.cpp  Stopwatch.cpp  String_utilities.cpp  SymbolicStateDfa.cpp  Transducer.cpp  VarMgr.cpp
submodules/lydia/: CMakeLists.txt
submodules/lydia/app/: CMakeLists.txt
submodules/lydia/app/lydia/: CMakeLists.txt
submodules/lydia/lib/: CMakeLists.txt
submodules/lydia/lib/include/lydia/mona_ext/: mona_ext_base.hpp
submodules/lydia/lib/include/lydia/utils/: dfa_transform.hpp
submodules/lydia/lib/src/utils/: dfa_transform.cpp
